Version 2.6.2
-----------------------------------------------------------------------
9 February 2009
+ Moved error file to inc/
+ Blank passwords forbidden.

28 January 2009
+ Error check added to cosign authorization.

27 January 2009
+ php fiveasized the classes.
+ Added some needed error logging to user creation problems
+ Added ability for default user groups to be set for admin created
  and newly joined users.
+ Fixed testing on addMembers. Previous code was nonsensical.
+ _user_group id gets set upon a user object save.
+ Updated: templates/forms/settings.tpl

Version 2.6.1
-----------------------------------------------------------------------
11 December 2008
+ requireLogin now reroutes dependant on the user authorization
+ If the user's group is missing when they are updated, a new one is
  properly created. Prior to the fix, a new group was created without an
  assigned user id.
+ Added error message to my page if update goes bad.

Version 2.6.0
-----------------------------------------------------------------------
17 November 2008
+ Fixed user installation in German. Special thanks to Hilmar for
pointing this out.

14 November 2008
+ Site contact copied from hub

5 November 2008
+ Fixed delete link.
+ Current_User - Added "secured" function to Current_User. Works like
  authorized but uses salted urls.

31 October 2008
+ Put in a local_user setting in authorization. My Page disabled if
  local_user is false.

27 October 2008
+ Authkeys can be salted with special keys.
+ Added function verifySaltedUrl which verifies the authkey in the
  current url.

10 October 2008
+ Added display name to pager search

2 October 2008
+ Reduced language list
+ Updated: conf/languages.php

1 October 2008
+ Added option to use control panel fly out menu.
+ Dependency on new controlpanel.
+ Updated : templates/my_page/user_setting.tpl


23 September 2008
+ Moved security log before error page call.

17 September 2008
+ php 5 formatting added.